# Noteferatu

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: tauri-build.yml  tauri-release.yml  test.yml
app/: globals.css  layout.tsx  page.tsx
app/note/: page.tsx
components/: DatabaseProvider.tsx  Navigation.tsx  Titlebar.tsx  background.tsx  chat.tsx  graph.tsx  layout.tsx
components/agent/: agent.tsx  agentpanel.tsx  context.tsx  conversation.tsx  error.tsx  indicator.tsx  logos.tsx  message.tsx  model_selector.tsx  settings.tsx  token.tsx
components/buffer/: group.tsx  header.tsx  node.tsx  tabs.tsx
components/chat/: Chat.tsx  Messages.tsx  Settings.tsx  SourceDropdown.tsx  chat.tsx  messages.tsx  settings.tsx  tools.tsx
components/core/: accordion.tsx  button.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  link.tsx  popover.tsx  select.tsx  tooltip.tsx
components/editor/: Autosave.tsx  Decorations.ts  DeleteDialog.tsx  Edges.ts  Editor.tsx  NoteLinkMenu.ts  NoteTitle.tsx  (+9 more)
crates/agent/: .gitignore  Cargo.toml  build.rs
crates/agent/permissions/: default.toml
crates/agent/permissions/autogenerated/: reference.md
crates/agent/permissions/autogenerated/commands/: allow-update-message.toml  create_conversation.toml  list_conversations.toml  list_messages.toml  remove_conversation.toml  rename_conversation.toml  send_message.toml  send_stream_message.toml  stop_messages.toml  try_connect.toml  update_message.toml
crates/agent/permissions/schemas/: schema.json
crates/agent/src/: agent.rs  client.rs  error.rs  lib.rs  sse.rs
crates/agent/src/agent/: agent.rs  context.rs  conversation.rs  manager.rs  mod.rs  schema.rs
crates/agent/src/anthropic/: client.rs  errors.rs  messages.rs  mod.rs  models.rs  stream.rs
crates/agent/src/core/: client.rs  error.rs  message.rs  mod.rs  model.rs  request.rs  response.rs  tools.rs
crates/agent/src/google/: chat.rs  client.rs  errors.rs  mod.rs  models.rs  stream.rs
crates/agent/src/ollama/: chat.rs  client.rs  errors.rs  mod.rs  models.rs  stream.rs
crates/agent/src/openai/: chat.rs  client.rs  error.rs  errors.rs  mod.rs  models.rs  stream.rs
crates/agent/src/openrouter/: chat.rs  client.rs  error.rs  errors.rs  mod.rs  models.rs  stream.rs
crates/agent/src/plugin/: commands.rs  desktop.rs  error.rs  mobile.rs  mod.rs  models.rs
crates/agent/src/providers/: mod.rs
crates/agent/src/providers/anthropic/: client.rs  error.rs  message.rs  mod.rs  model.rs  request.rs  response.rs  stream.rs
crates/agent/src/providers/google/: client.rs  content.rs  error.rs  mod.rs  model.rs  request.rs  response.rs
crates/agent/src/providers/ollama/: client.rs  message.rs  mod.rs  model.rs  request.rs  response.rs
crates/agent/src/providers/openai/: client.rs  error.rs  message.rs  mod.rs  model.rs  request.rs  response.rs
crates/agent/src/providers/openrouter/: client.rs  error.rs  mod.rs  model.rs  request.rs
crates/helsync/: .gitignore  Cargo.toml  build.rs
crates/helsync/permissions/: default.toml
crates/helsync/permissions/autogenerated/: reference.md
crates/helsync/permissions/autogenerated/commands/: copy-file.toml  create-folder.toml  create_bookmark.toml  create_folder.toml  create_tag.toml  create_tag_bind.toml  get-file.toml  get_file.toml  list-files.toml  list_bookmarks.toml  list_files.toml  list_tags.toml  move-file.toml  move_file.toml  read_from_file.toml  remove-file.toml  remove_bookmark.toml  remove_file.toml  remove_tag_bind.toml  write_to_file.toml
crates/helsync/permissions/schemas/: schema.json
crates/helsync/src/: client.rs  errors.rs  filesystem.rs  lib.rs  sync.rs  utils.rs
crates/helsync/src/cloud/: mod.rs
crates/helsync/src/cloud/googledrive/: change.rs  client.rs  error.rs  file.rs  mod.rs
crates/helsync/src/cloud/onedrive/: client.rs  error.rs  file.rs  mod.rs  status.rs
crates/helsync/src/core/: client.rs  delta.rs  error.rs  file.rs  filesystem.rs  mod.rs
crates/helsync/src/fs/: client.rs
crates/helsync/src/fs/googledrive/: googledrive.rs  mod.rs
crates/helsync/src/fs/local/: local.rs  sql.rs
crates/helsync/src/fs/onedrive/: onedrive.rs  status.rs
crates/helsync/src/googledrive/: change.rs  file.rs  googledrive.rs  mod.rs
crates/helsync/src/local/: client.rs  file.rs  local.rs  mod.rs  schema.rs  tags.rs
crates/helsync/src/oauth2/: config.rs  grant.rs  mod.rs  token.rs  utils.rs
crates/helsync/src/onedrive/: item.rs  mod.rs  onedrive.rs
crates/helsync/src/plugin/: commands.rs  desktop.rs  error.rs  mobile.rs  mod.rs  models.rs  schema.rs
crates/helsync/src/sync/: sync.rs
crates/plugins/agent/: Cargo.toml  README.md  build.rs
crates/plugins/agent/permissions/: default.toml
crates/plugins/agent/permissions/autogenerated/: reference.md
crates/plugins/agent/permissions/autogenerated/commands/: list_models.toml
crates/plugins/agent/permissions/schemas/: schema.json
crates/plugins/agent/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
database/: clearDatabase.ts
helsync/: .gitignore  Cargo.toml
helsync/src/: lib.rs
helsync/src/database/: database.rs  migrations.rs  mod.rs
helsync/src/fs/: fs.rs  mod.rs  utils.rs
helsync/src/fs/googledrive/: change.rs  file.rs  googledrive.rs
helsync/src/fs/local/: file.rs  mod.rs
helsync/src/fs/onedrive/: item.rs  mod.rs  onedrive.rs
helsync/src/oauth2/: config.rs  grant.rs  pkce.rs  utils.rs
hooks/: windowsize.ts
lib/: Database.ts  DatabaseFunctions.ts  OpenRouter.ts  UUID.ts  agent.ts  database.sqlite  db.ts  helsync.ts  markdown.ts  setupDB.ts  testDatabase.ts
src-tauri/: Cargo.toml  UsersmatheDocumentsSeniorProjectNoteferatulib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/macwindow/: Cargo.toml  LICENSE
src-tauri/plugins/macwindow/src/: lib.rs  macos.rs
src-tauri/src/: lib.rs
test/: Decorations.test.ts  database.test.tsx  example.test.tsx
(+52 files in other folders)
