[workspace]
resolver = "2"
members = [
        "crates/agent",
        "crates/helsync",
        "crates/macwindow",
        "crates/database",
        "src-tauri",
]

[profile.release]
strip = true      # Automaticaly strip symbols from the binary.
opt-level = "s"   # Optimize for size.
lto = true        # Link-time optimization.
codegen-units = 1 # Reduce parallel code generation for better optimization.
panic = "abort"   # Abort on panic.
