[package]
name = "helsync"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.16.0"
dirs = "6.0.0"
form_urlencoded = "1.2.1"
futures-core = "0.3.31"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15.0"
