[package]
name = "NoteFeratu"
version = "0.1.0"
description = "NoteFeratu is a plain-text personal knowledge management system"
authors = ["Michail Zeipekki", "Daniel Wildsmith", "Mathew Alangadan", "Grayson Kornberg", "Anton Salvador"]
license = "GPL-3.0-or-later"
repository = "https://github.com/zeim839/Noteferatu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = ["macos-private-api"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-sql = "2"
