[package]
name = "NoteFeratu"
version = "1.0.0"
description = "NoteFeratu!"
authors = ["NoteFeratu"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
macwindow = { path = "../crates/macwindow" }
agent = { path = "../crates/agent", features = ["plugin"] }
helsync = { path = "../crates/helsync", features = ["plugin"] }
tokio = { version = "1.47.1", features = ["full"] }
dirs = "6.0.0"
database = { path = "../crates/database" }
