[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"

[dev-dependencies]
dotenv = "0.15.0"
