[package]
name = "plugin-agent"
version = "0.1.0"
authors = [ "NoteFeratu" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "plugin-agent"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"
agent = { path = "../../agent" }
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
